@@ -95,7 +95,8 @@ class Optimizer {
                 weapon_ele1: this.player.weapon_ele1,
                 weapon_ele2: this.player.weapon_ele2,
                 shield_ele1: this.player.shield_ele1,
-                shield_ele2: this.player.shield_ele2
+                shield_ele2: this.player.shield_ele2,
+                battle_boost: this.player.battle_boost
             });
             const battle = new Battle({ player: tmp_player, mob: this.mob, list_modifiers: this.list_modifiers });
             const win_chance = battle.repeat_fights(this.n_fights);
@@ -164,7 +165,8 @@ class Optimizer {
                 weapon_ele1: this.player.weapon_ele1,
                 weapon_ele2: this.player.weapon_ele2,
                 shield_ele1: this.player.shield_ele1,
-                shield_ele2: this.player.shield_ele2
+                shield_ele2: this.player.shield_ele2,
+                battle_boost: this.player.battle_boost
             });
 
             const battle = new Battle({ player: tmp_player, mob: this.mob, list_modifiers: this.list_modifiers });
