@@ -1,3 +1,6 @@
+2025-06-15 19:03
+- Adapted coded to new squadron buffs. API import will be fixed in another moment
+
 2025-06-06 16:20
 - Corrected bug with Spectres not being imported through API and included available but unused stats in the optimization
 
